# cheguia

./: .gitignore  ARCHITECTURE.md
backend-fastapi/: README.md  pyproject.toml
backend-fastapi/alembic/: env.py
backend-fastapi/alembic/versions/: e283d11561ee_initial_migration.py
backend-fastapi/app/: main.py
backend-fastapi/app/api/: deps.py
backend-fastapi/app/api/api_v1/: api.py
backend-fastapi/app/api/api_v1/endpoints/: chat.py  documents.py  login.py  users.py  utils.py
backend-fastapi/app/core/: config.py  security.py
backend-fastapi/app/db/: session.py
backend-fastapi/app/models/: chat.py  document.py  user.py
backend-fastapi/app/schemas/: chat.py
backend-fastapi/app/services/: document_service.py  ollama_service.py
backend-fastapi/scripts/: check_documents.py  debug_rag.py  gen_pdf.py
backend-fastapi/tests/: test_api.py  test_rag.py
